        - Reworked/optimized dirlist sorting
        - Added handling for special dirs completeness (i.e. dirfix)
    {+} !skipinc to enable/disable racing incomplete files (#16)
    {+} tvlanguage rule for TVMaze infos (#79)
    {+} !sites output is in alphabetically order (#152)
    {+} !siteuser to change a site username
    {+} !sitepass to change a site password
    {+} !routeset/!routelock supports several new ways to set routes -> !help routeset (#82)
    {+} Add all available Genres from TVMaze und TheTVDB
    {+} Affilsgroups with _INT will be handled as normal Affilgroup, no need to add both (e.g. ZzZz & ZzZz_INT) (#129)
    {+} New IRC Help Command -> !help nhelp
    {+} Enable/disable NFO Download for fetching infos + automatically disable problematic sites -> !help usefornfodownload (#125)
    {+} New !affils cmd (acts like chgrp on glftpd) -> !help affils
    {+} Add new sections over IRC -> !help sectionins
    {+} Wrap IRC Messages into 256 char long chunks (#36)
    {+} Wrap lines on console window based on width (#36)
    {+} Option to enable/disable autoinvite -> !help autoinvite (#84)
    {#} nukewords from slftp.precatcher works as intended, supporting double quoted strings and shows correct matched nukeword (#144)
        -> Rename nukewords to ignorewords in slftp.precatcher (see above!)
    {#} Precatcher reload (!catchreload) works correctly when using split_site_data=1 (#132)
    {#} Precatcher should be faster due to several code changes which improves performance and [EXCEPTION] ProcessReleaseVegeB mind = true is fixed
    {#} Skip FTPRush screwed up files with 4 chars in Extension (e.g. .FLAC) (#113)
    {#} Bug with !dirlist not showing entries (#112)
    {#} Bug with looping of Sample folder fixed (#4)                                                                          ---- need some more code changes - uses SetFileError ---
    {#} Uppercasing mappings sections names in slftp.precatcher (#153)